--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "husky:prepare": "husky install"
+    "husky:prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "next": "^13.3.4",
@@ -12,14 +14,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.8",
+    "@storybook/addon-interactions": "^7.0.8",
+    "@storybook/addon-links": "^7.0.8",
+    "@storybook/blocks": "^7.0.8",
+    "@storybook/nextjs": "^7.0.8",
+    "@storybook/react": "^7.0.8",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-storybook": "^0.6.11",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "storybook": "^7.0.8"
   }
 }
