--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "^13.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
