--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@mantine/core": "^6.0.10",
     "classnames": "^2.3.2",
     "next": "^13.3.4",
     "react": "^18.2.0",
