--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "classnames": "^2.3.2",
     "next": "^13.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "swr": "^2.1.5"
   },
   "devDependencies": {
